@@ -88,7 +88,7 @@ static ProviderRegister *pClone(ProviderRegister * br)
    return NULL;
 }
 
-void addProviderToHT(ProviderInfo *info, UtilHashTable *ht, int freeable)
+static void addProviderToHT(ProviderInfo *info, UtilHashTable *ht)
 {
     ProviderInfo *checkDummy;
     /* first we add the provider to the providerRegister with the classname
@@ -100,8 +100,8 @@ void addProviderToHT(ProviderInfo *info, UtilHashTable *ht, int freeable)
      * wants to serve the same class - so we do not add it to the
      * register but append it to the one already found or to its master*/
         if(strcmp(checkDummy->providerName, info->providerName) == 0) {
-            /* double registration - discard */
-          if (freeable) freeInfoPtr(info);
+           /* double registration - discard */
+          freeInfoPtr(info);
           return;
         } else {
             checkDummy->nextInRegister = info;
@@ -197,7 +197,7 @@ ProviderRegister *newProviderRegister()
                else if (qualiProvInfoPtr==NULL) {
                   if (strcmp(info->className,"$QualifierProvider$")==0) qualiProvInfoPtr=info;
                }
-               addProviderToHT(info, ((ProviderBase *) br->hdl)->ht, 1);
+               addProviderToHT(info, ((ProviderBase *) br->hdl)->ht);
             }
             info = (ProviderInfo *) calloc(1, sizeof(ProviderInfo));
             info->className = strdup(rv.id);
@@ -293,7 +293,7 @@ ProviderRegister *newProviderRegister()
       }
 
       if (info) {
-	addProviderToHT(info, ((ProviderBase *) br->hdl)->ht, 1);
+	addProviderToHT(info, ((ProviderBase *) br->hdl)->ht);
       }
    }
    if (in) {
