@@ -137,8 +137,6 @@ struct _Provider_Register_FT;
 
 ProviderRegister *newProviderRegister();
 
-void addProviderToHT(ProviderInfo *info, UtilHashTable *ht, int freeable);
-
 #ifdef __cplusplus
 }
 #endif
